# cw-interchain

./: Cargo.toml
contracts/ibc-transfer/: Cargo.toml
contracts/ibc-transfer/src/: contract.rs  lib.rs  msg.rs
