[workspace]
members = [ "contracts/ibc-transfer","packages/*"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[workspace.package]
version = "2.0.0"

[workspace.dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = { version = "1.5.0",features = [
    "cosmwasm_1_3",
] }
cw2 = "1.1.2"
cw-storage-plus = "1.2.0"
cw-utils  = "1.0.3"
neutron-sdk = "0.10.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
