[package]
name = "ibc-transfer"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
cw-ibc-transfer = { path = "../../packages/cw-ibc-transfer" }
neutron-sdk = { workspace = true }
