[package]
name = "ibc-transfer"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
cw-ibc-transfer = { path = "../../packages/cw-ibc-transfer" }
neutron-sdk = { workspace = true }
